# terminalpp

./: .appveyor.yml  .clang-format  .clang-tidy  .codedocs  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeListsConan.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Doxyfile.in  LICENSE  README.md  annotated.html  ansi_2graphics_8hpp_source.html  ansi_2mouse_8hpp_source.html  ascii_8hpp_source.html  attribute_8hpp_source.html  behaviour_8hpp_source.html  canvas_8hpp_source.html  character__set_8hpp_source.html  charset_8hpp_source.html  classconanfile_1_1TerminalppConan-members.html  classconanfile_1_1TerminalppConan.html  classconanfile_1_1TerminalppTestConan-members.html  classconanfile_1_1TerminalppTestConan.html  classes.html  classterminalpp_1_1canvas-members.html  classterminalpp_1_1canvas.html  classterminalpp_1_1canvas_1_1column__proxy-members.html  classterminalpp_1_1canvas_1_1column__proxy.html  classterminalpp_1_1canvas_1_1const__column__proxy-members.html  classterminalpp_1_1canvas_1_1const__column__proxy.html  classterminalpp_1_1disable__mouse-members.html  classterminalpp_1_1disable__mouse.html  classterminalpp_1_1enable__mouse-members.html  (+288 more)
.ci/: fetch_system_dependencies.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
.travis/: fetch_conan_dependencies.sh  fetch_system_dependencies.sh
aside/src/: attribute.cpp  character_set.cpp  effect.cpp  encoder.cpp  glyph.cpp  rectangle.cpp  screen.cpp  string.cpp  terminal.cpp  virtual_key.cpp
aside/test/: ansi_charset_test.cpp  canvas_test.cpp  character_set_test.cpp  control_sequence_test.cpp  element_test.cpp  expect_sequence.hpp  manip_test.cpp  mouse_test.cpp  palette_test.cpp  point_test.cpp  rectangle_test.cpp  terminal_erase_test.cpp  terminal_init_test.cpp  terminal_read_test.cpp  terminal_settings_test.cpp  terminal_string_test.cpp
cmake/: terminalpp-config.cmake.in
cmake/Modules/: FindBoost.cmake  FindCppUnit.cmake  cotire.cmake  function-git_version.cmake  function-parse_version.cmake
examples/colour_viewer/: CMakeLists.txt
examples/colour_viewer/src/: colour_viewer.cpp
examples/encoded_hello_world/: CMakeLists.txt  README.md  conanfile.txt
examples/encoded_hello_world/src/: encoded_hello_world.cpp
examples/hello_world/: CMakeLists.txt  README.md
examples/hello_world/src/: hello_world.cpp
examples/positioned_smiley/: CMakeLists.txt  README.md  conanfile.txt
examples/positioned_smiley/src/: positioned_smiley.cpp
examples/shocking_pink/: CMakeLists.txt  README.md
examples/shocking_pink/src/: shocking_pink.cpp
examples/tprint/: CMakeLists.txt  README.md
examples/tprint/src/: tprint.cpp
examples/wait_for_mouse_click/: CMakeLists.txt  conanfile.txt
examples/wait_for_mouse_click/src/: wait_for_mouse_click.cpp
include/terminalpp/: ansi_terminal.hpp  attribute.hpp  behaviour.hpp  canvas.hpp  canvas_view.hpp  character_set.hpp  colour.hpp  control_sequence.hpp  core.hpp  default_terminal.hpp  draw_context.hpp  effect.hpp  element.hpp  encoder.hpp  event_context.hpp  extent.hpp  glyph.hpp  graphics.hpp  mouse.hpp  palette.hpp  point.hpp  rectangle.hpp  screen.hpp  stdout_channel.hpp  string.hpp  terminal.hpp  terminal_manip.hpp  terminal_state.hpp  terminalpp.hpp  token.hpp  version.hpp.in  view.hpp  view_context.hpp  virtual_key.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+47 more)
src/: ansi_terminal.cpp  attribute.cpp  canvas.cpp  canvas_view.cpp  character_set.cpp  colour.cpp  control_sequence.cpp  default_terminal.cpp  effect.cpp  element.cpp  encoder.cpp  extent.cpp  glyph.cpp  mouse.cpp  point.cpp  rectangle.cpp  screen.cpp  stdout_channel.cpp  string.cpp  string_io.cpp  terminal.cpp  terminal_manip.cpp  terminal_state.cpp  virtual_key.cpp
src/ansi/: charset.cpp  control_sequence.cpp  functions.cpp  protocol.cpp
src/detail/: element_difference.cpp  element_udl.cpp  parse_helper.cpp  parser.cpp  string_to_elements.cpp  terminal_charset_control.cpp  terminal_control.cpp  terminal_cursor_control.cpp  well_known_virtual_key.cpp  write_element.cpp
src/manip/: cursor.cpp  erase.cpp  erase_display.cpp  erase_line.cpp  hide_cursor.cpp  mouse.cpp  move_cursor.cpp  restore_cursor_position.cpp  save_cursor_position.cpp  show_cursor.cpp  terminal_streamer.cpp  window.cpp  write_element.cpp  write_optional_default_attribute.cpp
src/model/: default_brush_model.cpp
src/models/: default_brush_model.cpp
src/views/: brush_view.cpp  default_draw_context.cpp  default_view_context.cpp
test/: ansi_functions_test.cpp  ansi_terminal_cursor_test.cpp  ansi_terminal_init_test.cpp  ansi_terminal_read_cursor_test.cpp  ansi_terminal_read_test.cpp  ansi_terminal_settings_test.cpp  ansi_terminal_string_test.cpp  attribute_test.cpp  brush_view_test.cpp  canvas_test.cpp  canvas_view_test.cpp  character_set_test.cpp  colour_test.cpp  control_sequence_test.cpp  default_brush_model_test.cpp  default_draw_context_test.cpp  default_event_context_test.cpp  default_terminal_cursor_test.cpp  default_terminal_init_test.cpp  default_terminal_read_cursor_test.cpp  default_terminal_settings_test.cpp  default_terminal_string_test.cpp  default_view_context_test.cpp  effect_test.cpp  element_test.cpp  element_udl_test.cpp  encoder_test.cpp  expect_sequence.cpp  expect_sequence.hpp  expect_tokens.cpp  expect_tokens.hpp  extent_test.cpp  glyph_test.cpp  main.cpp  manip_test.cpp  mouse_test.cpp  palette_test.cpp  parser_test.cpp  point_test.cpp  rectangle_test.cpp  (+14 more)
test/fakes/: fake_channel.hpp
test/io/: attribute.cpp  attribute.hpp  element.cpp  element.hpp  (+4 more)
test_package/: CMakeLists.txt  conanfile.py  example.cpp
(+86 files in other folders)
